[package]
name = "my-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
bytes = "1" # Used by Mini-Redis instead of Vec<u8> mainly for clone() method which is basically a Arc<Vec<u8>> (Arc = atomic reference counter)